# lunch_box

./: .gitignore  CHANGELOG.md  CLAUDE.MD  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HOW_TO.md  LICENSE  MILESTONE_4_ADDENDUM.md  MILESTONE_4_SUMMARY.md  README.md  ROADMAP.md  hello_world  hello_world.cpp  make_release.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
Source/: AudioConfiguration.h  AudioConverter.cpp  AudioConverter.h  AudioScanner.cpp  AudioScanner.h  BankFolderParser.cpp  BankFolderParser.h  ChompiNamer.cpp  ChompiNamer.h  ChompiProcessor.cpp  ChompiProcessor.h  FileSystemHelper.cpp  FileSystemHelper.h  Logger.cpp  Logger.h  Main.cpp  TestChompiNamer.cpp  TestLunchBoxNamer.cpp
Source/CLI/: CliProcessor.cpp  CliProcessor.h
Source/GUI/: AppMenuBar.cpp  AppMenuBar.h  AudioPreviewPlayer.cpp  AudioPreviewPlayer.h  BankEditorPanel.cpp  BankEditorPanel.h  BankFocusPanel.cpp  BankFocusPanel.h  BankRowComponent.cpp  BankRowComponent.h  BankSlotComponent.cpp  BankSlotComponent.h  ChompiFonts.h  ClipboardHelper.h  ClipboardHelper.mm  FocusedSlotRow.cpp  FocusedSlotRow.h  FolderDropZone.cpp  FolderDropZone.h  GuiProcessor.cpp  GuiProcessor.h  MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h  PreviewPanel.cpp  PreviewPanel.h  UIColours.h  UIConstants.h  WaveformDisplay.cpp  WaveformDisplay.h
Source/GUI/Bank/: BankFocusPanel.cpp  BankFocusPanel.h  BankFocusPanel_Drag.cpp  BankFocusPanel_ExternalDrag.cpp  BankFocusPanel_Private.h  BankFocusPanel_Selection.cpp  FocusedSlotRow.cpp  FocusedSlotRow.h
Source/GUI/Common/: ClipboardEntry.h  DragController.cpp  DragController.h  DragHost.h  DragModel.cpp  DragModel.h  DragProxy.cpp  DragProxy.h  PackModel.cpp  PackModel.h
Source/GUI/Pack/: BankEditorPanel.cpp  BankEditorPanel.h  BankEditorPanel_Drag.cpp  BankEditorPanel_ExternalDrag.cpp  BankEditorPanel_Private.h  BankEditorPanel_Selection.cpp  BankRowComponent.cpp  BankRowComponent.h  BankSlotComponent.cpp  BankSlotComponent.h
Source/GUI/Preview/: AudioPreviewPlayer.cpp  PreviewPanel.cpp  PreviewPanel.h  WaveformDisplay.cpp  WaveformDisplay.h
Source/GUI/Shell/: AppMenuBar.cpp  AppMenuBar.h  ClipboardHelper.cpp  ClipboardHelper.h  ClipboardHelper.mm  ConsoleWindow.h  ExportThread.cpp  ExportThread.h  FolderDropZone.cpp  FolderDropZone.h  GuiProcessor.cpp  GuiProcessor.h  HelpOverlay.cpp  HelpOverlay.h  MainComponent.cpp  MainComponent.h  MainComponent_Commands.cpp  MainComponent_Process.cpp  MainComponent_Session.cpp  MainComponent_Undo.cpp  MainComponent_View.cpp  MainWindow.cpp  MainWindow.h  MessageOverlay.cpp  MessageOverlay.h  PackButton.h  PackNameOverlay.cpp  PackNameOverlay.h  WipeTabButton.h
Source/GUI/Style/: FooterButtonLAF.h  LabelStrings.h  LunchBoxFonts.h  UIColours.h  UIConstants.h
Source/Processing/: AudioConverter.cpp  AudioConverter.h  BankFolderParser.cpp  BankFolderParser.h  ChompiNamer.cpp  ChompiNamer.h  ChompiProcessor.cpp  ChompiProcessor.h  LunchBoxNamer.cpp  LunchBoxNamer.h  LunchBoxProcessor.cpp  LunchBoxProcessor.h
assets/: AppIcon.icns
converted/: README.md
fonts/: OFL-Fredoka.txt  OFL.txt
logs/: README.md
prompts/: MILESTONES_OVERVIEW.md  figma_project_brief.txt  milestone_10_plan.md  milestone_11_plan.md  milestone_12_plan.md  milestone_13_plan.md  milestone_1_plan.md  milestone_2_plan.md  milestone_3_plan.md  milestone_4_plan.md  milestone_5_plan.md  milestone_6_plan.md  milestone_7_plan.md  milestone_8_plan.md  milestone_9_plan.md  starter_prompt.md
test_audio/: README.md  TESTING_SUMMARY.md
tests/: BankFolderParserTests.cpp  ChompiNamerTests.cpp  DragModelTests.cpp  FileSystemHelperTests.cpp  PackModelTests.cpp  TestMain.cpp
